--- a/css/custom.css
+++ b/css/custom.css
@@ -46,10 +46,7 @@
  *   - pixel 5a 413px break
  */
 @media only screen and (max-width: 600px) {
-  #parallax {
-    height: 800px;
-    transform: translateZ(-2px) scale(3);
-  }
+  #parallax { height: 800px; }
   .abby_title {
     font-size: 50px;
     height: 55px;
@@ -159,6 +156,12 @@
   }
 }
 
+/* parallax scrolling on screens up to 1199px */
+@media only screen and (max-width: 1199px) {
+  #parallax {
+    transform: translateZ(-2px) scale(3);
+  }
+}
 
 #copyright-section {
     padding: 5px;
